# constexpr-sin

./: .clang-format  README.md  makefile
.github/workflows/: c-cpp.yml
src/: main.cpp  meson.build  sin.hpp  speed_check.cpp
